--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Acrylicorner
-email: holdenprofit@gmail.com
+email: holdenprofit at gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   The personal blogsite and portfolio of Holden Profit, web developer and game developer!
 baseurl: "" # the subpath of your site, e.g. /blog
