--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: Acrylicorner
 email: holdenprofit at gmail.com
 description: The personal blogsite and portfolio of Holden Profit, game developer, web developer, hobby artist, and aspiring car enthusiast!
 baseurl: "" # the subpath of your site, e.g. /blog
-# url: "http://localhost:4000" #local dev only
-url: http://acrylicorner.com # the base hostname & protocol for your site
+url: http://localhost:4000 #local dev only
+# url: http://acrylicorner.com # the base hostname & protocol for your site
 
 share:
   facebook: true
@@ -37,10 +37,10 @@ yandex_metrica:
 # Set this to your disqus shortname to enable comments. Note that the 'comments'
 # setting below must also be true. Individual posts can override 'comments' to
 # disable on a post-by-post basis
-disqus: holdenprofit
+disqus: acrylicorner
 comments: true
 
-permalink: /:year/:month/:title
+# permalink: /:year/:month/:title
 
 # Build settings
 markdown: kramdown
