--- a/_config.yml
+++ b/_config.yml
@@ -55,5 +55,6 @@ presentations: [
   ['howToUseGit.html', 'How to Use Git'],
   ['howToUseJasmine.html', 'How to Use Jasmine'],
   ['introToGaming_part1.html', 'Introduction to Game Development Part 1'],
-  ['introToGaming_part2.html', 'Introduction to Game Development Part 2']
+  ['introToGaming_part2.html', 'Introduction to Game Development Part 2'],
+  ['introToGaming_part3.html', 'Introduction to Game Development Part 3']
 ]
