--- a/_config.yml
+++ b/_config.yml
@@ -51,11 +51,5 @@ kramdown:
 exclude: ['README.md', 'LICENSE']
 
 presentations: [
-  ['swarmIntelligence.html', 'Swarm Intelligence'],
-  ['howToUseGit.html', 'How to Use Git'],
-  ['howToUseJasmine.html', 'How to Use Jasmine'],
-  ['introToGaming_part1.html', 'Introduction to Game Development Part 1'],
-  ['introToGaming_part2.html', 'Introduction to Game Development Part 2'],
-  ['introToGaming_part3.html', 'Introduction to Game Development Part 3'],
-  ['introToGaming_part4.html', 'Introduction to Game Development Part 4']
+  ['howToUseGit.html', 'How to Use Git']
 ]
